# Autotextv2

./: .gitignore  CMakeLists.txt  README.md  clearLogs.cpp  main.cpp  test.c  wordsTest.yaml
DLLs/: keyBoardHook.lib
DLLs/headers/: hook.h
DLLs/oldDLL/: keyBoardHook.lib
DLLs/updatedDLL/: keyBoardHook.lib
UI/: CMakeLists.txt  main.cpp
UI/sources/: CMakeLists.txt  mainApp.cpp  mainFrame.cpp  mainTrayIcon.cpp  paths.cpp
UI/sources/headers/: ID.hpp  all.hpp  mainApp.hpp  mainFrame.hpp  mainTrayIcon.hpp  paths.hpp
UI/sources/subPanels/: editPanel.cpp  homePanel.cpp
UI/sources/subPanels/headers/: editPanel.hpp  homePanel.hpp
caracterReceiver/: tests.c
caracterReceiver/sources/: caracterReceiver.c
caracterReceiver/sources/headers/: caracterReceiver.h
installer/: AutotextInstallerScript.nsi
regexMotor/: main.c  tests.c
regexMotor/sources/: createMotor.c  dynIntArray.c  dynStateArray.c  dynStrArray.c  useMotor.c
regexMotor/sources/headers/: coloredPrints.h  createMotor.h  dynIntArray.h  dynStateArray.h  useMotor.h
sendKeyboardStrikes/: tests.c
sendKeyboardStrikes/sources/: keyboardIn.c
sendKeyboardStrikes/sources/headers/: keyboardIn.h
sources/: keyboardHook.cpp  logger.cpp
sources/headers/: keyboardHook.h
submodules/: CMakeLists.txt
submodules/caracterReceiver/: CMakeLists.txt  tests.c
submodules/caracterReceiver/sources/: CMakeLists.txt  caracterReceiver.c
submodules/caracterReceiver/sources/headers/: caracterReceiver.h
submodules/logger/: CMakeLists.txt  tests.cpp
submodules/logger/sources/: CMakeLists.txt  logger.cpp
submodules/logger/sources/headers/: logger.h  logger.hpp
submodules/regexMotor/: CMakeLists.txt  tests.c
submodules/regexMotor/sources/: CMakeLists.txt  createMotor.c  dynIntArray.c  dynStateArray.c  dynStrArray.c  useMotor.c
submodules/regexMotor/sources/headers/: createMotor.h  dynStrArray.h  useMotor.h
submodules/sendKeyboardStrikes/: CMakeLists.txt  tests.c
submodules/sendKeyboardStrikes/sources/: CMakeLists.txt  keyboardIn.c
submodules/sendKeyboardStrikes/sources/headers/: keyboardIn.h
submodules/utils/: CMakeLists.txt  coloredPrints.c  dynIntArray.c  dynStrArray.c  intListStack.c
submodules/utils/headers/: all.h  dynStrArray.h  intListStack.h
submodules/yamlHandler/: CMakeLists.txt  tests.c  wordsTest.yaml  wordsTestBackup.yaml
submodules/yamlHandler/sources/: CMakeLists.txt  wordPatterns.c  yamlHandler.c  yamlReader.c  yamlWriter.c
submodules/yamlHandler/sources/headers/: all.h  wordPatterns.h  yamlHandler.h  yamlReader.h  yamlWriter.h
submodules/yamlHandler/utils/: CMakeLists.txt  dynStrArray.c
submodules/yamlHandler/utils/headers/: dynStrArray.h
